# gpt5-happy-hour-discovery

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.layer  README.md  README_HAPPY_HOUR_SYSTEM.md  REPOSITORY_REVIEW.md  UPDATE_FRONTEND.md  apprunner-service.json  build_clean_layer.py  check_job_status.py  complete-deploy.sh  comprehensive-plan.md  create_role.sh  debug_import.py  deploy-full-system.sh  deploy-setup.md  deploy-with-env.sh  deploy.sh  deploy_aws.sh  deploy_lambda.sh  food_permits_restaurants.csv  gpt5_complete_system.py  gpt5_with_tools.py  happy_hour_backend.py  happy_hour_discovery_system.py  import_all_restaurants.py  import_to_supabase.py  lambda_emergency_fix.py  lambda_final.py  lambda_function.py  lambda_orchestrator.py  lambda_orchestrator_full.py  lambda_simple.py  main.py  package-lock.json  proper_gpt5_system.py  pyproject.toml  (+20 more)
.claudedocs/: chatwithchat.md
.github/workflows/: ci.yml
agents/google_agent/: handler.py
agents/site_agent/: handler.py
agents/voice_verify/: handler.py
agents/yelp_agent/: handler.py
api/: index.py  index_backup.py  main.py  requirements.txt
archive/: filter_food_permits.py  filter_happy_hour.py  filter_true_happy_hour.py  happy_hour_candidates.csv  true_happy_hour_venues.csv
aws/: README.md  deploy.sh  requirements.txt  samconfig.toml  template.yaml
database/: optimization-queries.sql  supabase-schema.sql
frontend/: .env.example  .env.production  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/.next/: trace
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: BulkUpload.tsx  RestaurantSearch.tsx  ResultsDisplay.tsx  StatsBar.tsx
happy-hour-frontend/: .env.production  package-lock.json  package.json
happy-hour-frontend/src/: App.css  App.tsx
lambda_deploy/: lambda_function.py
lambda_deploy/orchestrator/: lambda_function.py
lambda_deploy_fixed/: lambda_function.py
lambda_deploy_fixed/shared/: consensus.py  gpt5_config.py
lambda_deploy_fixed/supabase_auth-2.12.3.dist-info/: RECORD
lambda_deploy_fixed/websockets-15.0.1.dist-info/: RECORD
lambda_final/: lambda_function.py
lambda_full_deploy/openai-1.102.0.dist-info/: RECORD
lambda_full_deploy/realtime-2.7.0.dist-info/: RECORD
lambda_full_deploy/supabase-2.18.1.dist-info/: RECORD
lambda_layer/pydantic_core-2.39.0.dist-info/: RECORD
lambda_working/: lambda_function.py
orchestrator/: apprunner.yaml  deploy.sh  main.py  requirements.txt
python/openai-1.99.1.dist-info/: RECORD
scripts/: db_maintenance.py
shared/: models.py
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
tests/: conftest.py  test_lambda_orchestrator.py
(+122 files in other folders)
